Fix regression on a11y bar not showing

--- a/resources/stylesheets/layout/_header.scss
+++ b/resources/stylesheets/layout/_header.scss
@@ -232,6 +232,8 @@
     @include my.clearfix;
 
     .a11y-i18n-bar__list {
+      display: block;
+
       float: right;
       margin-right: 0;
       margin-left: auto;
